Style Fix - Editor is not visible when edit layout control

--- a/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
+++ b/ShunghamWebsite/App_Data/Sitefinity/WebsiteTemplates/Shungham/App_Themes/Shungham/Global/screen.css
@@ -3874,3 +3874,7 @@ svg:not(:root) {
     margin: auto;
     width: 700px !important;
 }
+
+#ZoneEditor{
+    z-index: 100000 !important;
+}
